--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -2,7 +2,55 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+:root {
+    --pink: #fdf2f8;
+    --red: #ef4444;
+    --amber: #f59e0b;
+    --light-gray: #edf2f8;
+    --dark-gray: rgb(31, 30, 42);
+    --pure-white: #fff;
+}
+
+a {
+    color: rgb(91, 214, 255);
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: 358px;
+    background-color: var(--dark-gray);
+    color: var(--pure-white);
+}
+
+header {
+    height: 80px;
+    width: 100%;
+}
+
+header > h1 {
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    background-color: var(--red);
+    color: var(--pure-white);
+    font-size: 2.5rem;
+    font-weight: bold;
+}
+
+footer {
+    position: fixed;
+    bottom: 0px;
+    z-index: 0;
+    align-items: center;
+    height: 80px;
 }
 
 #restart {
@@ -16,13 +64,13 @@
     /*  */
     display: grid;
     grid-template-rows: 40%;
-    border: 1px solid black;
+    border: 1px solid var(--light-gray);
     border-radius: 10px;
     width: 500px;
     max-width: 80%;
     height: 200px;
     z-index: 10;
-    background-color: white;
+    background-color: var(--dark-gray);
 }
 
 #restart.active {
@@ -34,7 +82,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border-bottom: 1px solid;
+    border-bottom: 1px solid var(--red);
 }
 
 .restart__body {
@@ -49,10 +97,19 @@
     margin-bottom: 20px;
 }
 
-.restart__body button {
-    width: 150px;
-    height: 30px;
-    cursor: pointer;;
+.restart__body > div > button {
+    width: 100px;
+    height: 40px;
+    gap: 10px;
+    font-size: 1rem;
+    font-weight: bold;
+    cursor: pointer;
+    color: var(--pure-white);
+    background-color: var(--red);
+}
+
+.restart__body button:hover {
+    background-color: #953030;
 }
 
 #overlay {
@@ -62,7 +119,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, .5);
+    background-color: rgba(0, 0, 0, .8);
     /* To avoid any interactions with elements underneath */
     pointer-events: none;
 }
@@ -70,4 +127,120 @@
 #overlay.active { 
     opacity: 1;
     pointer-events: all;
+}
+
+/* IMG */
+
+.options {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+    gap: 25px;
+    width: 100%;
+    height: 250px;
+}
+
+.op {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    width: 150px;
+    height: 150px;
+    padding: 10px;
+    color: var(--amber);
+    font-size: 5rem;
+    background-color: rgb(58, 51, 51);
+    border-radius: 50%;
+    border: 3px solid var(--pure-white);
+    transition: all 0.3s ease;
+}
+
+.op:hover {
+    background-color: rgb(122, 107, 107);
+}
+
+.green-shadow {
+    border: 3px solid greenyellow;
+    box-shadow: 0px 0px 15px 5px rgba(26,255,20,0.8);
+
+}
+
+.red-shadow {
+    border: 3px solid var(--red);
+    box-shadow: 0px 0px 15px 5px rgba(255, 0, 0, 0.8);
+
+}
+
+.tie-shadow {
+    box-shadow: 0px 0px 15px 5px rgba(206, 206, 206, 0.8);
+}
+
+/* TEXT */
+
+.infoText {
+    font-size: 1.4rem;
+    line-height: 5rem;
+}
+
+.score {
+    margin-top: 30px;
+    width: 250px;
+    height: 100px;
+    border: 2px solid var(--pure-white);
+}
+
+.score div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.score div > p {
+    font-size: 3rem;
+}
+
+.score__style {
+    padding: 0px 10px;
+    background-color: var(--red);
+    width: 80px;
+    height: 26px;
+    text-align: center;
+}
+
+.score__player {
+    position: fixed;
+    left: calc(50% - 40px - 125px);
+    top: calc(130px + 13px);
+}
+
+.score__computer {
+    position: fixed;
+    right: calc(50% - 40px - 125px);
+    top: calc(130px + 13px);
+}
+
+@media (max-width: 596px) {
+    .op {
+        font-size: 3.5rem;
+        height: 100px;
+        width: 100px;
+    }
+}
+
+@media (max-width: 408px) {
+    header h1 {
+        font-size: 2rem;
+    }
+    .options {
+        gap: 15px;
+    }
+    .op {
+        font-size: 2.5rem;
+        height: 80px;
+        width: 80px;
+    }
 }
